--- a/devobs/static/css/style2.css
+++ b/devobs/static/css/style2.css
@@ -235,7 +235,7 @@ i.fa.fa-inr {
     letter-spacing: 1px;
     font-family: 'Ropa Sans', sans-serif;
 }
-.banner-left input[type="text"],.banner-left input[type="email"],.banner-left input[type="tel"] {
+.banner-left input[type="text"],.banner-left input[type="password"], .banner-left input[type="email"],.banner-left input[type="tel"] {
     font-size: 1em;
     padding: .6em;
     margin: 1em 0;
@@ -1016,7 +1016,7 @@ iframe {
 	.banner-right p {
 		width: 92%;
 	}
-	.banner-left input[type="text"], .banner-left input[type="email"], .banner-left input[type="tel"] {
+	.banner-left input[type="text"],.contact-form input[type="password"], .banner-left input[type="email"], .banner-left input[type="tel"] {
 		padding: .5em;
 		margin: .8em 0;
 	}
