--- a/devobs/templates/base-new.html
+++ b/devobs/templates/base-new.html
@@ -29,10 +29,9 @@
                     <li><a href="#" class="btn btn-link btn-icon" data-navigation-horizontal-toggle="true"><span
                             class="icon-menu"></span></a></li>
                 </ul>
-                <a href="index2.html" class="app-header-logo app-header-logo-light app-header-logo-condensed">Project</a>
 
                 <ul class="app-header-buttons pull-right">
-                    <li><a href="#" class="btn btn-default">Log Out</a></li>
+                    <li><a href="/logout" class="btn btn-default">Log Out</a></li>
                 </ul>
             </div>
         </div>
@@ -146,6 +145,7 @@
 <script type="text/javascript" src="../static/js/vendor/customscrollbar/jquery.mCustomScrollbar.min.js"></script>
 <script type="text/javascript" src="../static/js/myAccount_summary.js"></script>
 <!-- END IMPORTANT SCRIPTS -->
+
 <!-- THIS PAGE SCRIPTS -->
 <script type="text/javascript" src="../static/js/vendor/bootstrap-select/bootstrap-select.js"></script>
 <script type="text/javascript"
@@ -158,9 +158,11 @@
 <script type="text/javascript" src="../static/js/app_demo.js"></script>
 <!-- END APP SCRIPTS -->
 <script src="../static/js/main.js" type="application/javascript"></script>
-{% block scripts %}
-{% endblock %}
+<script src="../static/js/accounting.js" type="application/javascript"></script>
 
+{% block scripts %}
+
+{% endblock %}
 
 <!-- Start of BotEngine (www.botengine.ai) code -->
 <script type="text/javascript">
