--- a/devobs/templates/account-activity.html
+++ b/devobs/templates/account-activity.html
@@ -15,17 +15,14 @@
                             <p>Your latest account usage</p>
                         </div>
                         <div class="heading-elements">
-                            <button class="btn btn-default btn-icon"><span class="icon-printer"></span></button>
                             <button class="btn btn-default btn-icon"><span class="icon-sync"></span></button>
                         </div>
                     </div>
                     <div class="block-content margin-bottom-0">
                         <div class="row">
                             <div class="col-md-4">
-                                <select class="bs-select" name="from" title="Choose your card">
+                                <select id="select-account">
                                     <option value="1">All accounts</option>
-                                    <option value="2">$1,544 Checking **9781</option>
-                                    <option value="3">$38,109 Saving **0001</option>
                                 </select>
                             </div>
                             <div class="col-md-4">
@@ -46,114 +43,16 @@
                             </div>
                         </div>
                     </div>
-                    <div class="block-divider-text">25 June 2017</div>
+                    <div class="block-divider-text"></div>
                     <div class="block-content">
-                        <div class="listing margin-bottom-0">
-                            <div class="listing-item listing-item-with-icon">
-                                <span class="icon-car listing-item-icon"></span>
-                                <h4 class="text-rg text-bold">Refilling the car on gas station <span
-                                        class="text-muted pull-right">25/06/2017 20:11</span></h4>
-                                <div class="list-group list-group-inline">
-                                    <div class="list-group-item col-md-4 col-sm-4">
-                                        <span class="text-muted">Account</span><br>
-                                        <span class="text-bold">Checking **9781</span>
-                                    </div>
-                                    <div class="list-group-item col-md-4 col-sm-4">
-                                        <span class="text-muted">Amount</span><br>
-                                        <span class="text-bold text-danger">-$13.50</span>
-                                    </div>
-                                    <div class="list-group-item col-md-4 col-sm-4">
-                                        <span class="text-muted">Balance</span><br>
-                                        <span class="text-bold">$1,544</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="listing-item listing-item-with-icon">
-                                <span class="icon-file-add listing-item-icon text-success"></span>
-                                <h4 class="text-rg text-bold">Income from Jenny Doe **5512 <span
-                                        class="text-muted pull-right">25/06/2017 10:11</span></h4>
-                                <div class="list-group list-group-inline margin-bottom-0">
-                                    <div class="list-group-item col-md-4 col-sm-4">
-                                        <span class="text-muted">Account</span><br>
-                                        <span class="text-bold">Saving **0001</span>
-                                    </div>
-                                    <div class="list-group-item col-md-4 col-sm-4">
-                                        <span class="text-muted">Amount</span><br>
-                                        <span class="text-bold text-success">+$250.00</span>
-                                    </div>
-                                    <div class="list-group-item col-md-4 col-sm-4">
-                                        <span class="text-muted">Balance</span><br>
-                                        <span class="text-bold">$1,802</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="block-divider-text">23 June 2017</div>
-                    <div class="block-content">
-                        <div class="listing margin-bottom-0">
-                            <div class="listing-item listing-item-with-icon">
-                                <span class="icon-film-play listing-item-icon"></span>
-                                <h4 class="text-rg text-bold">Paid tickes in Theater <span
-                                        class="text-muted pull-right">23/06/2017 18:55</span></h4>
-                                <div class="list-group list-group-inline">
-                                    <div class="list-group-item col-md-4 col-sm-4">
-                                        <span class="text-muted">Account</span><br>
-                                        <span class="text-bold">Saving **0001</span>
-                                    </div>
-                                    <div class="list-group-item col-md-4 col-sm-4">
-                                        <span class="text-muted">Amount</span><br>
-                                        <span class="text-bold text-danger">-$10.10</span>
-                                    </div>
-                                    <div class="list-group-item col-md-4 col-sm-4">
-                                        <span class="text-muted">Balance</span><br>
-                                        <span class="text-bold">$21,424</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="listing-item listing-item-with-icon">
-                                <span class="icon-store listing-item-icon"></span>
-                                <h4 class="text-rg text-bold">Shopping in NameMall. Shop: CarloMozolini <span
-                                        class="text-muted pull-right">23/06/2017 14:20</span></h4>
-                                <div class="list-group list-group-inline margin-bottom-0">
-                                    <div class="list-group-item col-md-4 col-sm-4">
-                                        <span class="text-muted">Account</span><br>
-                                        <span class="text-bold">Checking **9871</span>
-                                    </div>
-                                    <div class="list-group-item col-md-4 col-sm-4">
-                                        <span class="text-muted">Amount</span><br>
-                                        <span class="text-bold text-danger">-$99.99</span>
-                                    </div>
-                                    <div class="list-group-item col-md-4 col-sm-4">
-                                        <span class="text-muted">Balance</span><br>
-                                        <span class="text-bold">$1,657</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="listing-item listing-item-with-icon">
-                                <span class="icon-cart listing-item-icon"></span>
-                                <h4 class="text-rg text-bold">Internet shopping. Shop: AliExpress <span
-                                        class="text-muted pull-right">23/06/2017 10:11</span></h4>
-                                <div class="list-group list-group-inline margin-bottom-10">
-                                    <div class="list-group-item col-md-4 col-sm-4">
-                                        <span class="text-muted">Account</span><br>
-                                        <span class="text-bold">Saving **0001</span>
-                                    </div>
-                                    <div class="list-group-item col-md-4 col-sm-4">
-                                        <span class="text-muted">Amount</span><br>
-                                        <span class="text-bold text-danger">-$234.11</span>
-                                    </div>
-                                    <div class="list-group-item col-md-4 col-sm-4">
-                                        <span class="text-muted">Balance</span><br>
-                                        <span class="text-bold">$1,922</span>
-                                    </div>
-                                </div>
-                            </div>
+                        <div id="activities-list" class="listing margin-bottom-0">
+
                         </div>
                     </div>
                 </div>
                 <!-- END RECENT -->
 
+                <!--
                 <nav>
                     <ul class="pagination pagination-separated pull-right">
                         <li class="disabled">
@@ -173,7 +72,7 @@
                         </li>
                     </ul>
                 </nav>
-
+                 -->
             </div>
         </div>
 
@@ -183,5 +82,54 @@
 
 
 {% block scripts %}
+    <script type="application/javascript">
+        function getAccountActivities(accountNumber) {
+            $.ajax({
+                type: "POST",
+                url: "/api/user/account-activities",
+                data: {"accountNumber": accountNumber},
+                dataType: "json",
+                success: function (d) {
+                    $("#activities-list").html('');
+                    $.each(d.data, function (index, value) {
+                        printAccountActivities(value);
+                    });
+                }
+            });
+        }
 
+        function printAccountActivities(data) {
+            var activitiesInfo = "<div class=\"listing-item listing-item-with-icon\">\n" +
+                "                                <span class=\"icon-menu-circle listing-item-icon\"></span>\n" +
+                "                                <h4 class=\"text-rg text-bold\">" + data['desc'] + "<span\n" +
+                "                                        class=\"text-muted pull-right\">" + data['dateTime'] + "</span></h4>\n" +
+                "                                <div class=\"list-group list-group-inline\">\n" +
+                "                                    <div class=\"list-group-item col-md-4 col-sm-4\">\n" +
+                "                                        <span class=\"text-muted\">Account</span><br>\n" +
+                "                                        <span class=\"text-bold\">******" + String(data['accountNumber']).substr(-4) + "</span>\n" +
+                "                                    </div>\n" +
+                "                                    <div class=\"list-group-item col-md-4 col-sm-4\">\n" +
+                "                                        <span class=\"text-muted\">Amount</span><br>\n" +
+                "                                        <span class=\"text-bold \">" + accounting.formatMoney(data['amount']) + "</span>\n" +
+                "                                    </div>\n" +
+                "                                    <div class=\"list-group-item col-md-4 col-sm-4\">\n" +
+                "                                        <span class=\"text-muted\">Balance</span><br>\n" +
+                "                                        <span class=\"text-bold\">" + accounting.formatMoney(data['balanceSnapshot']) + "</span>\n" +
+                "                                    </div>\n" +
+                "                                </div>\n" +
+                "                            </div>";
+            console.log(activitiesInfo)
+            $("#activities-list").append(activitiesInfo);
+        }
+
+        $(function () {
+            $.when(fillSelectAccounts("select-account")).then($("#select-account").selectpicker());
+            getAccountActivities($("#select-account").val());
+
+            $("#select-account").change(function () {
+                getAccountActivities($(this).val());
+            });
+        });
+
+    </script>
 {% endblock %}
