--- a/devobs/templates/base-new.html
+++ b/devobs/templates/base-new.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Devonshire MyAccount-Summary</title>
+    <title>Devonshire Online</title>
 
     <!-- META SECTION -->
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -29,7 +29,7 @@
                     <li><a href="#" class="btn btn-link btn-icon" data-navigation-horizontal-toggle="true"><span
                             class="icon-menu"></span></a></li>
                 </ul>
-
+                <a href="/account-summary" class="app-header-logo app-header-logo-light app-header-logo-condensed">Project</a>
                 <ul class="app-header-buttons pull-right">
                     <li><a href="/logout" class="btn btn-default">Log Out</a></li>
                 </ul>
