--- a/devobs/templates/setting-account.html
+++ b/devobs/templates/setting-account.html
@@ -14,7 +14,7 @@
             </div>
             <div class="block-content">
 
-                <form  id="profile-form">
+                <form id="profile-form">
                     <div class="row">
                         <div class="col-md-612">
                             <div class="form-group">
@@ -32,27 +32,27 @@
                             <div class="form-group">
                                 <label class="col-md-3 control-label">First Name</label>
                                 <div class="col-md-9">
-                                    <input name="firstname" type="text" class="form-control"  readonly>
+                                    <input name="firstname" type="text" class="form-control" readonly>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label class="col-md-3 control-label">Last name</label>
                                 <div class="col-md-9">
-                                    <input name="lastname" type="text" class="form-control"  readonly>
+                                    <input name="lastname" type="text" class="form-control" readonly>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label class="col-md-3 control-label">Email</label>
                                 <div class="col-md-9">
-                                    <input name="email" type="text" class="form-control" >
+                                    <input name="email" type="text" class="form-control">
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label  class="col-md-3 control-label">Phone</label>
+                                <label class="col-md-3 control-label">Phone</label>
 
                                 <div class="col-md-4">
                                     <label>Primary: </label>
-                                    <input  name="phone" type="text" class="form-control" >
+                                    <input name="phone" type="text" class="form-control">
                                 </div>
                                 <div class="col-md-5">
                                     <label>Secondary:</label>
@@ -63,7 +63,7 @@
                             <div class="form-group">
                                 <label class="col-md-3 control-label">Address</label>
                                 <div class="col-md-9">
-                                    <input name="address" type="text" class="form-control" >
+                                    <input name="address" type="text" class="form-control">
                                 </div>
                             </div>
 
@@ -81,13 +81,13 @@
 
             </div>
             <div id="alertBlock" style="display: none" class="col-md-6">
-                    <div class="alert alert-info alert-icon-block alert-dismissible" role="alert">
-                        <div class="alert-icon"><span class="icon-clock"></span></div>
-                        <div id="alertMessage"></div>
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
-                                class="fa fa-times"></span></button>
-                    </div>
+                <div class="alert alert-info alert-icon-block alert-dismissible" role="alert">
+                    <div class="alert-icon"><span class="icon-clock"></span></div>
+                    <div id="alertMessage"></div>
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
+                            class="fa fa-times"></span></button>
                 </div>
+            </div>
         </div>
         <!-- END RECENT -->
 
@@ -97,5 +97,56 @@
 
 
 {% block scripts %}
+    <script type="application/javascript">
+        $(function () {
+            $.ajax({
+                type: "GET",
+                url: "/api/user/profile",
+                dataType: "json",
+                success: function (data) {
+                    if (data.status == 0) {
+                        sessionStorage.profile = JSON.stringify(data.data);
+                    } else {
+                        alert(data.msg);
+                    }
+                }
+            }).done(function () {
+                fillProfile(JSON.parse(sessionStorage.profile));
+            });
 
+            $("#profile-form").submit(function (event) {
+                event.preventDefault();
+                var form_data = $(this).serialize();
+
+                $.ajax({
+                    url: "/api/user/profile",
+                    type: "POST",
+                    data: form_data,
+                    dataType: "json",
+                    success: function (d) {
+                        if (d.status == 0) {
+                            $("#alertMessage").html("Update profile success.")
+                        } else {
+                            $("#alertMessage").html(d.message)
+                            console.log(d.message)
+                        }
+                        $("#alertBlock").show()
+                    }
+                });
+            });
+        });
+
+        function fillProfile(json_data) {
+            $("#profile-form input[name=username]").val(json_data["username"])
+            $("#profile-form input[name=ssn]").val(json_data["ssn"])
+            $("#profile-form input[name=firstname]").val(json_data["firstname"])
+            $("#profile-form input[name=lastname]").val(json_data["lastname"])
+            $("#profile-form input[name=email]").val(json_data["email"])
+            $("#profile-form input[name=phone]").val(json_data["phone"])
+            $("#profile-form input[name=address]").val(json_data["address"])
+            $("#profile-form input[name=securityQuestion]").val(json_data["securityQuestion"])
+            $("#profile-form input[name=securityAnswer]").val(json_data["securityAnswer"])
+        }
+
+    </script>
 {% endblock %}
